# weather

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  deploy-funcs.sh  deploy.sh  gen-cmake.sh  macports.cmake  parse-dwml.c
db/: db_schema.sql  dumpdb.sh  mysqld-debug.sh
ui/: CMakeLists.txt  Makefile  config.c  config.h  confirm.html  gen-cmake.sh  httpd-debug.sh  httpd.conf  main.c  main.html  synopsis.txt  usage.txt
